# controladoria-api

./: .gitignore  .isort.cfg  README.md  pyproject.toml  requirements.txt  ruff.toml
apps/extract/: __init__.py  pyproject.toml
apps/extract/models/: __init__.py  api.py  document.py
